// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchControls Component Snapshots basic snapshot 1`] = `
<Fragment>
  <h4>
    Step 1: Filter the Grade Report
  </h4>
  <div
    className="d-flex justify-content-between"
  >
    <Button
      className="btn-primary align-self-start"
      id="edit-filters-btn"
      onClick={[MockFunction toggleFilterDrawer]}
    >
      <Icon
        className="fa fa-filter"
      />
       Edit Filters
    </Button>
    <div>
      <SearchField
        inputLabel="Search for a learner"
        onChange={[Function]}
        onClear={[Function]}
        onSubmit={[Function]}
        value="alice"
      />
      <small
        className="form-text text-muted search-help-text"
      >
        Search by username, email, or student key
      </small>
    </div>
  </div>
</Fragment>
`;

exports[`SearchControls Component Snapshots show spinner 1`] = `
<Fragment>
  <h4>
    Step 1: Filter the Grade Report
  </h4>
  <div
    className="d-flex justify-content-between"
  >
    <div
      className="spinner-overlay"
    >
      <Icon
        className="fa fa-spinner fa-spin fa-5x color-black"
      />
    </div>
    <Button
      className="btn-primary align-self-start"
      id="edit-filters-btn"
      onClick={[MockFunction toggleFilterDrawer]}
    >
      <Icon
        className="fa fa-filter"
      />
       Edit Filters
    </Button>
    <div>
      <SearchField
        inputLabel="Search for a learner"
        onChange={[Function]}
        onClear={[Function]}
        onSubmit={[Function]}
        value="alice"
      />
      <small
        className="form-text text-muted search-help-text"
      >
        Search by username, email, or student key
      </small>
    </div>
  </div>
</Fragment>
`;
